  - Unix/Personal: support SASL as password hash type
  - PDF export: added option to print primary group members
  - Use HTTP_X_REAL_IP/HTTP_X_FORWARDED_FOR to log IP addresses (RFE 120)
  - LAM Pro:
   -> Personal: support image file size limit and cropping (requires php-imagick) in self service
   -> Password self reset: allow to enter custom security questions (RFE 115)
  - Fixed bugs:
   -> Self Service shows password reuse error after password change was required


16.12.2014 4.8
  - Active Directory: support paged result as workaround for size limit exceeded
  - FreeRadius: support dialupAccess and radiusProfileDn
  - Usability improvements
  - LAM Pro:
   -> Self service: added option if referrals should be followed
  - fixed bugs:
   -> missing LDAP_DEREF_NEVER in some cases (169)


07.10.2014 4.7.1
  - fixed bugs:
   -> Blank page and "User tried to access entry of type ..." log message when DN suffix does not exactly match case in LDAP


28.09.2014 4.7
  - Nginx webserver support
  - DHCP: support pooling of IP ranges (RFE 107)
  - Personal: support pager attribute (hidden by default)
  - Renamed config/lam.conf_sample to lam.conf.sample and config.cfg_sample to config.cfg.sample
  - LAM Pro:
   -> Password dialog: preset alternate email address with backup email address (RFE 111)


12.06.2014 4.6
  - Unix groups: allow to disable membership management
  - Extended LAM's internal password policies
  - Lamdaemon: move home directory on server if changed
  - Password policy check during typing
  - LAM Pro:
   -> Password self reset and user self registration support to set a header text
   -> Sudo roles: support latest schema
   -> Bind DLZ: automatic PTR management (disabled by default) and better formating of e.g. TTL values


18.03.2014 4.5
  - IMAP: allow dynamic admin user names by replacing wildcards with LDAP attributes
  - Personal: allow to set fields read-only
  - NIS mail aliases can be managed on user page