@@ -7,6 +7,7 @@ March 2015
   - LAM Pro:
    -> Personal: support image file size limit and cropping (requires php-imagick) in self service
    -> Password self reset: allow to enter custom security questions (RFE 115)
+   -> Unix groups (rfc2307bis): allow to sync members from group of (unique) names (RFE 116)
   - Fixed bugs:
    -> Self Service shows password reuse error after password change was required
 
